[metadata]
name = tflogparser
version = 0.0.3
author = _kritanta
author_email = krit@krit.me
description = tf2 stat parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kritantadev/tflogparser
project_urls =
    Bug Tracker = https://github.com/kritantadev/tflogparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/tflogparse
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
